--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ignite-ui/react": "^2.2.4",
     "@phosphor-icons/react": "^2.1.7",
+    "framer-motion": "^12.0.6",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
