--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@ignite-ui/react": "^2.2.4",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
     "@phosphor-icons/react": "^2.1.7",
+    "@prisma/client": "^6.3.1",
     "framer-motion": "^12.0.6",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-styled-components": "^2.2.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -22,6 +28,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
+    "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
