--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@ignite-ui/react": "^2.2.4",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@phosphor-icons/react": "^2.1.7",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.4.1",
+    "@tanstack/react-query": "^5.67.1",
     "framer-motion": "^12.0.6",
     "next": "15.1.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-styled-components": "^2.2.0",
@@ -28,7 +31,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "prisma": "^6.3.1",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
