--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@ignite-ui/react": "^2.2.4",
@@ -16,8 +17,9 @@
     "@mui/material": "^6.4.5",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@phosphor-icons/react": "^2.1.7",
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "^6.5.0",
     "@tanstack/react-query": "^5.67.1",
+    "axios": "^1.8.3",
     "framer-motion": "^12.0.6",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
