--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.67.1",
     "axios": "^1.8.3",
     "framer-motion": "^12.0.6",
+    "ldrs": "^1.1.6",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
