--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@prisma/client": "^6.5.0",
     "@tanstack/react-query": "^5.67.1",
     "axios": "^1.8.3",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.0.6",
+    "googleapis": "^148.0.0",
     "ldrs": "^1.1.6",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
