--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "@prisma/client": "^6.5.0",
     "@tanstack/react-query": "^5.67.1",
+    "@vitalets/google-translate-api": "^9.2.1",
     "axios": "^1.8.3",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.0.6",
