--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cron": "ts-node scripts/cron-runner.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
@@ -27,6 +28,7 @@
     "ldrs": "^1.1.6",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
+    "node-cron": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-styled-components": "^2.2.0",
@@ -40,6 +42,7 @@
     "postcss": "^8",
     "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
